[*] Fixed hlogo not aligning to its left

--- a/css/style.css
+++ b/css/style.css
@@ -20,12 +20,32 @@ a {
 
 .header {
     display: flex;
+    gap: 16px;
+   
+
+}
+
+.top1 {
+    display: flex;
     justify-content: space-between;
+    width: 1000px;
+    
+}
+
+.hlogo {
+    display: flex;
+    text-align: left;
+    align-items: center;
 }
 
 .head-cont {
     background-color: rgb(129, 36, 36);
-    flex-wrap: wrap;
+    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    
 }
 
 .demohero {
